fixed alignment issues with table

--- a/public/style.css
+++ b/public/style.css
@@ -8,7 +8,7 @@ body {
 	padding: 0;
 	margin: 0;
  }
- 
+
  .site-title {
 	color: #FFFFFF;
 	display: block;
@@ -57,7 +57,6 @@ caption {
 }
 .location-name {
 	font-weight: bold;
-	font-size: 110%;
 }
 th, td {
 	padding:.25em 0;
@@ -129,7 +128,7 @@ tr th:nth-child(2) {
 }
 
 tr th:nth-child(3) {
-  width: 8em;
+  width: 16em;
 }
 
 tr th:nth-child(4) {
